--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2692,23 +2692,23 @@ div .pane-blockify-blockify-site-slogan {
 h1#site-title a {
   font-family: 'Lobster Two';
   font-weight: 700;
-  text-align: right;
+  text-align: center;
   margin-top: -.125em;
   margin-right: 1em;
-  font-size: 2em;
+  font-size: 1.15em;
   text-decoration: none;
   color: white;
 }
 @media (min-width: 600px) {
   h1#site-title a {
-    font-size: 2em;
+    font-size: 1.15em;
     text-decoration: none;
     color: white;
   }
 }
 @media (min-width: 1024px) {
   h1#site-title a {
-    font-size: 2em;
+    font-size: .75em;
     letter-spacing: .125em;
     text-decoration: none;
     color: white;
@@ -2776,7 +2776,7 @@ ul li.last.leaf {
     margin-left: 0;
     margin-right: 2.08333%;
     clear: none;
-    margin-top: -3.25em;
+    margin-top: -4em;
     margin-left: -3em;
     font-size: 1.15em;
   }
@@ -2790,7 +2790,7 @@ ul li.last.leaf {
     clear: none;
     clear: both;
     font-size: 1.15em;
-    margin-top: -5.25em;
+    margin-top: -3.65em;
   }
 }
 
@@ -2824,8 +2824,16 @@ h2 {
   font-weight: 800;
 }
 
-.panel-pane.pane-block.pane-block-1 {
-  text-align: center;
+@media (min-width: 1024px) {
+  .panel-pane.pane-block.pane-block-1 {
+    width: 97.91667%;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
+    clear: none;
+    text-align: center;
+    margin-top: -2em;
+  }
 }
 
 .panel-pane.pane-block.pane-block-2 {
@@ -2848,8 +2856,8 @@ h2 {
     margin-left: 0;
     margin-right: 1.04167%;
     clear: none;
-    margin-top: -5em;
+    margin-top: -3.15em;
     margin-right: 1.75em;
-    text-align: center;
+    text-align: right;
   }
 }
