--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -20,21 +20,21 @@ h1#site-title a{
   // mobile first
   font-family: 'Lobster Two';
   font-weight: 700;
-  text-align: right;
+  text-align: center;
   margin-top: -.125em;
   margin-right: 1em;
-  font-size: 2em;
+  font-size: 1.15em;
   text-decoration: none;
   color: white;
 
   @include breakpoint($tablet) {
 
-    font-size: 2em;
+    font-size: 1.15em;
     text-decoration: none;
     color: white;
   }
   @include breakpoint($desktop) {
-    font-size: 2em;
+    font-size: .75em;
     letter-spacing: .125em;
     text-decoration: none;
     color: white;
@@ -88,7 +88,7 @@ ul li.last.leaf {
 
   @include breakpoint($tablet) {
     @include grid-span(6, 1);
-    margin-top: -3.25em;
+    margin-top: -4em;
     margin-left: -3em;
     font-size: 1.15em;
   }
@@ -97,7 +97,7 @@ ul li.last.leaf {
     @include grid-span(12, 1);
     clear: both;
     font-size: 1.15em;
-    margin-top: -5.25em;
+    margin-top: -3.65em;
   }
 }
 
@@ -128,10 +128,16 @@ ul li.last.leaf a:link, a:visited {
 h2{
   font-family: 'Open Sans'; font-weight: 800;
 }
-.panel-pane.pane-block.pane-block-1 {
-  text-align: center;
-}
 
+// front page title
+.panel-pane.pane-block.pane-block-1 {
+  @include breakpoint($desktop) {
+    @include grid-span(12, 1);
+    text-align: center;
+    margin-top: -2em;
+  }
+}
+// search icon
 .panel-pane.pane-block.pane-block-2 {
   // mobile first
   margin-top: -5em;
@@ -144,8 +150,8 @@ h2{
 
   @include breakpoint($desktop) {
     @include grid-span(12, 1);
-    margin-top: -5em;
+    margin-top: -3.15em;
     margin-right: 1.75em;
-    text-align: center;
+    text-align: right;
   }
 }
