--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2765,35 +2765,6 @@ ul li.last.leaf {
   }
 }
 
-.panel-pane.pane-block.pane-system-main-menu {
-  margin-top: -2em;
-  margin-left: -2em;
-}
-@media (min-width: 600px) {
-  .panel-pane.pane-block.pane-system-main-menu {
-    width: 95.83333%;
-    float: right;
-    margin-left: 0;
-    margin-right: 2.08333%;
-    clear: none;
-    margin-top: -4em;
-    margin-left: -3em;
-    font-size: 1.15em;
-  }
-}
-@media (min-width: 1024px) {
-  .panel-pane.pane-block.pane-system-main-menu {
-    width: 97.91667%;
-    float: right;
-    margin-left: 0;
-    margin-right: 1.04167%;
-    clear: none;
-    clear: both;
-    font-size: 1.15em;
-    margin-top: -3.65em;
-  }
-}
-
 ul.menu {
   border: none;
   list-style: none;
@@ -2826,13 +2797,42 @@ h2 {
 
 @media (min-width: 1024px) {
   .panel-pane.pane-block.pane-block-1 {
-    width: 97.91667%;
-    float: right;
-    margin-left: 0;
-    margin-right: 1.04167%;
+    width: 22.91667%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 51.04167%;
     clear: none;
     text-align: center;
     margin-top: -2em;
+  }
+}
+
+.panel-pane.pane-block.pane-system-main-menu {
+  margin-top: -2em;
+  margin-left: -2em;
+}
+@media (min-width: 600px) {
+  .panel-pane.pane-block.pane-system-main-menu {
+    width: 95.83333%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+    margin-top: -4em;
+    margin-left: -3em;
+    font-size: 1.15em;
+  }
+}
+@media (min-width: 1024px) {
+  .panel-pane.pane-block.pane-system-main-menu {
+    width: 47.91667%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 1.04167%;
+    clear: none;
+    clear: both;
+    font-size: 1.15em;
+    margin-top: -3.65em;
   }
 }
 
@@ -2851,10 +2851,10 @@ h2 {
 }
 @media (min-width: 1024px) {
   .panel-pane.pane-block.pane-block-2 {
-    width: 97.91667%;
-    float: right;
-    margin-left: 0;
-    margin-right: 1.04167%;
+    width: 22.91667%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 67.70833%;
     clear: none;
     margin-top: -3.15em;
     margin-right: 1.75em;
