--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -81,25 +81,7 @@ ul li.last.leaf {
   }
 }
 
-.panel-pane.pane-block.pane-system-main-menu {
-  // mobile first
-  margin-top: -2em;
-  margin-left: -2em;
 
-  @include breakpoint($tablet) {
-    @include grid-span(6, 1);
-    margin-top: -4em;
-    margin-left: -3em;
-    font-size: 1.15em;
-  }
-
-  @include breakpoint($desktop) {
-    @include grid-span(12, 1);
-    clear: both;
-    font-size: 1.15em;
-    margin-top: -3.65em;
-  }
-}
 
 ul.menu {
   border: none;
@@ -132,11 +114,33 @@ h2{
 // front page title
 .panel-pane.pane-block.pane-block-1 {
   @include breakpoint($desktop) {
-    @include grid-span(12, 1);
+    @include grid-span(3, 7);
     text-align: center;
     margin-top: -2em;
   }
 }
+
+// front page menu
+.panel-pane.pane-block.pane-system-main-menu {
+  // mobile first
+  margin-top: -2em;
+  margin-left: -2em;
+
+  @include breakpoint($tablet) {
+    @include grid-span(6, 1);
+    margin-top: -4em;
+    margin-left: -3em;
+    font-size: 1.15em;
+  }
+
+  @include breakpoint($desktop) {
+    @include grid-span(6, 1);
+    clear: both;
+    font-size: 1.15em;
+    margin-top: -3.65em;
+  }
+}
+
 // search icon
 .panel-pane.pane-block.pane-block-2 {
   // mobile first
@@ -149,7 +153,7 @@ h2{
   }
 
   @include breakpoint($desktop) {
-    @include grid-span(12, 1);
+    @include grid-span(3, 9);
     margin-top: -3.15em;
     margin-right: 1.75em;
     text-align: right;
