--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2681,6 +2681,82 @@ main .aurora-section-third {
   }
 }
 
+.panel-pane.pane-block.pane-system-main-menu {
+  margin-top: -2em;
+  margin-left: -2em;
+}
+@media (min-width: 600px) {
+  .panel-pane.pane-block.pane-system-main-menu {
+    width: 45.83333%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 2.08333%;
+    clear: none;
+    margin-top: -4em;
+    margin-left: -.5em;
+  }
+}
+@media (min-width: 1024px) {
+  .panel-pane.pane-block.pane-system-main-menu {
+    width: 31.25%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 1.04167%;
+    clear: none;
+    clear: both;
+    margin-top: -3.55em;
+  }
+}
+
+@media (min-width: 600px) {
+  .panel-pane.pane-block.pane-block-1 {
+    width: 12.5%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 52.08333%;
+    clear: none;
+    text-align: center;
+    margin-top: -2em;
+  }
+}
+@media (min-width: 1024px) {
+  .panel-pane.pane-block.pane-block-1 {
+    width: 31.25%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 34.375%;
+    clear: none;
+    text-align: center;
+    margin-top: -2em;
+  }
+}
+
+.panel-pane.pane-block.pane-block-2 {
+  margin-top: -5em;
+  margin-right: 1em;
+}
+@media (min-width: 600px) {
+  .panel-pane.pane-block.pane-block-2 {
+    width: 29.16667%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+  }
+}
+@media (min-width: 1024px) {
+  .panel-pane.pane-block.pane-block-2 {
+    width: 31.25%;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
+    clear: none;
+    margin-top: -3.15em;
+    margin-right: 1.75em;
+    text-align: right;
+  }
+}
+
 .aurora-section-first {
   background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url("../img/benamercom-header.jpg");
 }
@@ -2793,82 +2869,4 @@ ul li.last.leaf a:link, a:visited {
 h2 {
   font-family: 'Open Sans';
   font-weight: 800;
-}
-
-.panel-pane.pane-block.pane-system-main-menu {
-  margin-top: -2em;
-  margin-left: -2em;
-}
-@media (min-width: 600px) {
-  .panel-pane.pane-block.pane-system-main-menu {
-    width: 45.83333%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 2.08333%;
-    clear: none;
-    margin-top: -4em;
-    margin-left: -3em;
-    font-size: 1.15em;
-  }
-}
-@media (min-width: 1024px) {
-  .panel-pane.pane-block.pane-system-main-menu {
-    width: 31.25%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 1.04167%;
-    clear: none;
-    clear: both;
-    font-size: 1.15em;
-    margin-top: -3.55em;
-  }
-}
-
-@media (min-width: 600px) {
-  .panel-pane.pane-block.pane-block-1 {
-    width: 12.5%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 52.08333%;
-    clear: none;
-    text-align: center;
-    margin-top: -2em;
-  }
-}
-@media (min-width: 1024px) {
-  .panel-pane.pane-block.pane-block-1 {
-    width: 31.25%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 34.375%;
-    clear: none;
-    text-align: center;
-    margin-top: -2em;
-  }
-}
-
-.panel-pane.pane-block.pane-block-2 {
-  margin-top: -5em;
-  margin-right: 1em;
-}
-@media (min-width: 600px) {
-  .panel-pane.pane-block.pane-block-2 {
-    width: 29.16667%;
-    float: right;
-    margin-left: 0;
-    margin-right: 2.08333%;
-    clear: none;
-  }
-}
-@media (min-width: 1024px) {
-  .panel-pane.pane-block.pane-block-2 {
-    width: 31.25%;
-    float: right;
-    margin-left: 0;
-    margin-right: 1.04167%;
-    clear: none;
-    margin-top: -3.15em;
-    margin-right: 1.75em;
-    text-align: right;
-  }
 }
