--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -68,3 +68,57 @@ main .aurora-section-third {
     @include grid-span(4, 9);
   }
 }
+
+// header
+// front page menu
+.panel-pane.pane-block.pane-system-main-menu {
+  // mobile first
+  margin-top: -2em;
+  margin-left: -2em;
+
+  @include breakpoint($tablet) {
+    @include grid-span(3, 1);
+    margin-top: -4em;
+    margin-left: -.5em;
+
+  }
+
+  @include breakpoint($desktop) {
+    @include grid-span(4, 1);
+    clear: both;
+    margin-top: -3.55em;
+  }
+}
+
+// front page title
+.panel-pane.pane-block.pane-block-1 {
+  @include breakpoint($tablet) {
+    @include grid-span(1, 4);
+    text-align: center;
+    margin-top: -2em;
+  }
+  @include breakpoint($desktop) {
+    @include grid-span(4, 5);
+    text-align: center;
+    margin-top: -2em;
+  }
+}
+
+// search icon
+.panel-pane.pane-block.pane-block-2 {
+  // mobile first
+  margin-top: -5em;
+  margin-right: 1em;
+
+  @include breakpoint($tablet) {
+    @include grid-span(2, 5);
+
+  }
+
+  @include breakpoint($desktop) {
+    @include grid-span(4, 9);
+    margin-top: -3.15em;
+    margin-right: 1.75em;
+    text-align: right;
+  }
+}
