--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2673,6 +2673,73 @@ main .aurora-section-third {
   }
 }
 
+body.page-node .aurora-sample-layout:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+body.page-node main .aurora-section-first {
+  height: 180px;
+  clear: both;
+  margin-top: -1.5em;
+}
+@media (min-width: 600px) {
+  body.page-node main .aurora-section-first {
+    width: 95.83333%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+    clear: both;
+    height: 180px;
+    margin-top: inherit;
+  }
+}
+@media (min-width: 1024px) {
+  body.page-node main .aurora-section-first {
+    width: 97.91667%;
+    clear: right;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
+    height: 360px;
+    clear: both;
+    margin-top: inherit;
+  }
+}
+
+body.page-node main .aurora-section-second {
+  clear: both;
+  margin: auto;
+  width: 90%;
+}
+@media (min-width: 600px) {
+  body.page-node main .aurora-section-second {
+    width: 95.83333%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+    clear: both;
+  }
+}
+@media (min-width: 1024px) {
+  body.page-node main .aurora-section-second {
+    width: 97.91667%;
+    clear: right;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
+    width: 90%;
+    clear: both;
+  }
+}
+
+body.page-node main .aurora-section-third {
+  display: none;
+}
+
 .panel-pane.pane-block.pane-system-main-menu {
   display: none;
   margin-top: -1.5em;
