--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -19,6 +19,8 @@ $desktop: 1024px;
 @include add-gutter(1/3 at $tablet);
 @include add-gutter(1/3 at $desktop);
 
+// front page styles
+
 .aurora-sample-layout {
   @include clearfix;
 }
@@ -71,8 +73,58 @@ main .aurora-section-third {
   }
 }
 
+// article pages layout styles
+// body.page-node
+
+body.page-node .aurora-sample-layout {
+  @include clearfix;
+}
+
+body.page-node main .aurora-section-first {
+  height: 180px;
+  clear: both;
+  margin-top: -1.5em;
+  @include breakpoint($tablet) {
+    @include grid-span(6, 1);
+    clear: both;
+    height: 180px;
+    margin-top: inherit;
+
+  }
+
+  @include breakpoint($desktop) {
+    @include grid-span(12, 1, $output-style: 'float');
+    height: 360px;
+    clear: both;
+    margin-top: inherit;
+  }
+}
+
+body.page-node main .aurora-section-second {
+  @include add-gutter-style('split');
+  clear: both;
+  margin: auto;
+  width: 90%;
+  @include breakpoint($tablet) {
+    @include grid-span(6, 1);
+    clear: both;
+  }
+  @include breakpoint($desktop) {
+    @include grid-span(12, 1, $output-style: 'float');
+    width:90%;
+    clear: both;
+  }
+
+}
+
+body.page-node main .aurora-section-third {
+  display:none;
+}
+
+
+
 // header
-// front page menu
+// global
 .panel-pane.pane-block.pane-system-main-menu {
   // mobile first
   display:none;
